Try to change the side bar

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -500,21 +500,21 @@
 .wide {
   .page {
     @include breakpoint($large) {
-      padding-right: 0;
+      padding-right: #{$right-space};
     }
 
     @include breakpoint($x-large) {
-      padding-right: 0;
+      padding-right: #{$right-space};
     }
   }
 
   .page__related {
     @include breakpoint($large) {
-      padding-right: 0;
+      padding-right: #{$right-space};
     }
 
     @include breakpoint($x-large) {
-      padding-right: 0;
+      padding-right: #{$right-space};
     }
   }
 }
