--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -138,10 +138,10 @@ $x-large: 1280px !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow: 350px !default;
-$right-sidebar-width: 450px !default;
-$right-sidebar-width-wide: 550px !default;
-
+$right-sidebar-width-narrow: 320px !default;
+$right-sidebar-width: 420px !default;
+$right-sidebar-width-wide: 520px !default;
+$right-space: 200px !default;
 
 /*
    Other
