--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -23,12 +23,12 @@
 .page {
   @include breakpoint($large) {
     float: right;
-    width: calc(100% - #{$right-space});
+    width: calc(100% - #{$right-sidebar-width-narrow});
     padding-right: $right-space;
   }
 
   @include breakpoint($x-large) {
-    width: calc(100% - #{$right-space});
+    width: calc(100% - #{$right-sidebar-width});
     padding-right: $right-space;
   }
 
