--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -24,12 +24,12 @@
   @include breakpoint($large) {
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-right: $right-space;
+    padding-right: $right-sidebar-width-narrow;
   }
 
   @include breakpoint($x-large) {
     width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-space;
+    padding-right: $right-sidebar-width;
   }
 
   .page__inner-wrap {
@@ -500,21 +500,21 @@
 .wide {
   .page {
     @include breakpoint($large) {
-      padding-right: #{$right-space};
+      padding-right: $right-space;
     }
 
     @include breakpoint($x-large) {
-      padding-right: #{$right-space};
+      padding-right: $right-space;
     }
   }
 
   .page__related {
     @include breakpoint($large) {
-      padding-right: #{$right-space};
+      padding-right: $right-space;
     }
 
     @include breakpoint($x-large) {
-      padding-right: #{$right-space};
+      padding-right: $right-space;
     }
   }
 }
