Try to change the side bar

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -352,11 +352,11 @@
   .wide {
   .archive {
     @include breakpoint($large) {
-      padding-right: 0;
+      padding-right: $right-space;
     }
 
     @include breakpoint($x-large) {
-      padding-right: 0;
+      padding-right: $right-space;
     }
   }
 }
