--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,7 +60,7 @@
     </h2>
     
     {% if post.read_time %}
-      <p class="page__meta"><i class="far fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
+      <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 
         {% if post.collection == 'teaching' %}
