--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -39,7 +39,8 @@
 
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-<!--     {% if include.type == "grid" and teaser %}
+<!-- This part is removed to see if the teaser is removed-->
+    {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
         <img src=
           {% if teaser contains "://" %}
@@ -49,7 +50,7 @@
           {% endif %}
           alt="">
       </div>
-    {% endif %} -->
+    {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
