--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,8 +1,8 @@
-{% if post.header.teaser %}
+<!-- {% if post.header.teaser %}
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
 {% else %}
   {% assign teaser = site.teaser %}
-{% endif %}
+{% endif %} -->
 
 {% if post.id %}
   {% assign title = post.title | markdownify | remove: "<p>" | remove: "</p>" %}
@@ -40,7 +40,7 @@
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
 <!-- This part is removed to see if the teaser is removed-->
-<!--     {% if include.type == "grid" and teaser %}
+    {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
         <img src=
           {% if teaser contains "://" %}
@@ -50,7 +50,7 @@
           {% endif %}
           alt="">
       </div>
-    {% endif %} -->
+    {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
