--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,3 +1,4 @@
+<!-- This part is removed to see if the teaser is removed-->
 <!-- {% if post.header.teaser %}
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
 {% else %}
@@ -40,7 +41,7 @@
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
 <!-- This part is removed to see if the teaser is removed-->
-    {% if include.type == "grid" and teaser %}
+<!--     {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
         <img src=
           {% if teaser contains "://" %}
@@ -51,7 +52,7 @@
           alt="">
       </div>
     {% endif %}
-
+ -->
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
